--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,8 @@
 {
-	"name": "itlife/imager",
-	"description": "plugin for infrajs",
+	"name": "infrajs/imager",
+	"description": "Crop and resize images dynamicly in src",
 	"license": "GPL3",
-	"authors": [{
-		"name": "itlife",
-		"email": "info@itlife-studio.ru"
-	}],
-	"autoload": {
-		"psr-4": { "itlife\\imager\\": "/" }
-	},
 	"require": {
-		"itlife/infra":"~1"
+		"infrajs/infra":"~1"
 	 }
 }
