--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
 	"name": "infrajs/imager",
+	"homepage":"https://github.com/infrajs/imager",
 	"description": "Crop and resize images dynamicly in src",
 	"license": "GPL3",
 	"require": {
