--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
 	"license": "GPL3",
 	"require": {
 		"infrajs/access":"~1",
+		"infrajs/once":"~1",
 		"infrajs/ans":"~1",
 		"infrajs/path":"~1",
 		"infrajs/nostore":"~1",
