--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
 	"require": {
 		"infrajs/access":"~1",
 		"infrajs/once":"~1",
+		"infrajs/router":"~1",
 		"infrajs/ans":"~1",
 		"infrajs/path":"~1",
 		"infrajs/nostore":"~1",
